--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,3 +1,56 @@
 // Place all the styles related to the Products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+​ 
+.products {
+  margin: 0;
+  padding: 0.5em;
+  background-color: #effeef;
+  a {
+    padding: 0.354em 0.5em;
+    border-radius: 0.354em;
+  }
+  table {
+    border-collapse: collapse;
+  }
+  td {
+    padding: 0.5em;
+    margin: 0;
+  }
+
+  tr {
+    background-color: #effeef;
+  }
+
+  td.image {
+    display: none;
+    @media (min-width: 30em){
+      display: block;
+      img {
+        height: 11.30em
+      }
+    }
+  }
+
+  td.description {
+    h1 {
+      font-size: 1.4em;
+    }
+  }
+
+  td.actions {
+    ul {
+      padding: 0;
+      list-style: none;
+      li {
+        padding: 0.5em 0.5em;
+      }
+    }
+  }
+
+  tfoot {
+    td {
+      padding: 0.5em 0;
+    }
+  }
+}
