--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Depot</title>
+    <title>Pragprog Books Online Store</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,10 +10,24 @@
   </head>
 
   <body>
-    <main class='<%= controller.controller_name %>'>
+    <header class="main">
+      <%= image_tag 'logo.svg', alt: 'The Progmatic Bookshelf' %>
+      <h1><%= @page_title %></h1>
+    </header>
 
-      <%= yield %>
+    <section class="content">
+      <nav class="side_nav">
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/questions">Question</a></li>
+          <li><a href="/news">news</a></li>
+          <li><a href="/contact">Contact</a></li>
+        </ul>
+      </nav>
 
-    </main>
+      <main class='<%= controller.controller_name %>'>
+        <%= yield %>
+      </main>
+    </section>
   </body>
 </html>
