--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -15,7 +15,8 @@
             <%= sanitize(product.description) %>
           </p>
           <div class="price">
-            <%=number_to_currency(product.price)%>
+            <%= number_to_currency(product.price) %>
+            <%= button_to 'Add to Cart', line_items_path(product_id: product) %>
           </div>
         </li>
       <% end %>
